--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
   <div class="container">
     <h1>Hey!!! I created my own version of Instagram</h1>
-    <a href="jst.html" ><input type="button" value="Click Me">
-    </a> </div>
+    <a href="https://your-domain.com/jst.html"><input type="button" value="Click Me"></a>
+  </div>
 
 </body>
 </html>
