--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <div class="container">
     <h1>Hey!!! I created my own version of Instagram</h1>
-    <a href="https://your-domain.com/jst.html"><input type="button" value="Click Me"></a>
+    <a href="jst.html"><input type="button" value="Click Me"></a>
   </div>
 
 </body>
