--- a/index.html
+++ b/index.html
@@ -1,50 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello, World!</title>
-  <style>
-    body {
-      background-color: #0C1013; /* Dark background color */
-      color: white; /* Text color */
-      margin: 0; /* Remove default margin */
-      font-family: Arial, sans-serif; /* Set font family */
-      display: flex; /* Use flexbox to center content */
-      justify-content: center; /* Center horizontally */
-      align-items: center; /* Center vertically */
-      height: 100vh; /* Full height of the viewport */
-      text-align: center; /* Center text */
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Random Credentials</title>
+    <style>
+        body {
+            background-color: #0C1013; /* Dark background color */
+            color: white; /* Text color */
+            margin: 0; /* Remove default margin */
+            font-family: Arial, sans-serif; /* Set font family */
+            display: flex; /* Use flexbox to center content */
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
+            height: 100vh; /* Full height of the viewport */
+            text-align: center; /* Center text */
+        }
 
-    .container {
-      display: flex; /* Flexbox for container */
-      flex-direction: column; /* Stack items vertically */
-      align-items: center; /* Center items */
-    }
+        .container {
+            display: flex; /* Flexbox for container */
+            flex-direction: column; /* Stack items vertically */
+            align-items: center; /* Center items */
+        }
 
-    input[type="button"] {
-      font-size: 1.5rem; /* Responsive font size */
-      color: white; /* Button text color */
-      background-color: #1a1a1a; /* Button background color */
-      border: none; /* Remove default border */
-      padding: 15px 30px; /* Add padding */
-      border-radius: 5px; /* Rounded corners */
-      cursor: pointer; /* Pointer cursor on hover */
-      transition: background-color 0.3s; /* Smooth background change */
-    }
+        input[type="button"] {
+            font-size: 1.5rem; /* Responsive font size */
+            color: white; /* Button text color */
+            background-color: #1a1a1a; /* Button background color */
+            border: none; /* Remove default border */
+            padding: 15px 30px; /* Add padding */
+            border-radius: 5px; /* Rounded corners */
+            cursor: pointer; /* Pointer cursor on hover */
+            transition: background-color 0.3s; /* Smooth background change */
+        }
 
-    input[type="button"]:hover {
-      background-color: #333; /* Darker background on hover */
-    }
-  </style>
+        input[type="button"]:hover {
+            background-color: #333; /* Darker background on hover */
+        }
+    </style>
+    <script>
+        function generateCredentials() {
+            const usernames = ['user1', 'user2', 'user3', 'indu', 'johnDoe'];
+            const passwords = ['pass1', 'pass2', 'pass3', 'prav2007', 'secret'];
+
+            const randomUsername = usernames[Math.floor(Math.random() * usernames.length)];
+            const randomPassword = passwords[Math.floor(Math.random() * passwords.length)];
+
+            document.getElementById('usernameDisplay').textContent = randomUsername;
+            document.getElementById('passwordDisplay').textContent = randomPassword;
+
+            // Store credentials in localStorage
+            localStorage.setItem('username', randomUsername);
+            localStorage.setItem('password', randomPassword);
+        }
+    </script>
 </head>
-<body>
+<body onload="generateCredentials()">
 
-  <div class="container">
-    <h1>Hey!!! I created my own version of Instagram</h1>
-    <a href="instalogin.html"><input type="button" value="Click Me"></a>
-  </div>
+    <div class="container">
+        <h1>Hey!!! I created my own version of Instagram</h1>
+        <p>Your random username: <span id="usernameDisplay"></span></p>
+        <p>Your random password: <span id="passwordDisplay"></span></p>
+        <a href="instalogin.html"><input type="button" value="Go to Login Page"></a> <!-- Link updated -->
+    </div>
 
 </body>
 </html>
