--- a/jst.html
+++ b/jst.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="bye.css">
 </head>
 <body bgcolor="#0C1013">
-  <a href=""><img src="https://assets.onecompiler.app/42tmq6jud/3ww47radw/1000100133.jpg"></a>
+  <a href="in.html"><img src="https://assets.onecompiler.app/42tmq6jud/3ww47radw/1000100133.jpg"></a>
   <img src="https://assets.onecompiler.app/42tmq6jud/3ww47radw/1000100153.jpg">
   <img src="https://assets.onecompiler.app/42tmq6jud/3ww47radw/1000100148.jpg">
   <img src="https://assets.onecompiler.app/42tmq6jud/3ww47radw/1000100145.jpg">
