--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 <body onload="generateCredentials()">
 
     <div class="container">
-        <h1>Hey!!! I created my own version of Instagram</h1>
+        <h1>Hey!!! I created my own version of Instagram</h1><br>
+        <h6>Use below username and password for login</h6>
         <p>Your random username: <span id="usernameDisplay"></span></p>
         <p>Your random password: <span id="passwordDisplay"></span></p>
         <a href="instalogin.html"><input type="button" value="Go to Login Page"></a> <!-- Link updated -->
