--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="container">
         <h1>Hey!!! I created my own version of Instagram</h1><br>
-        <h6>Use below username and password for login</h6>
+        Use below username and password for login<br>
         <p>Your random username: <span id="usernameDisplay"></span></p>
         <p>Your random password: <span id="passwordDisplay"></span></p>
         <a href="instalogin.html"><input type="button" value="Go to Login Page"></a> <!-- Link updated -->
