--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </style>
     <script>
         function generateCredentials() {
-            const usernames = ['user1', 'user2', 'user3', 'indu', 'johnDoe'];
-            const passwords = ['pass1', 'pass2', 'pass3', 'prav2007', 'secret'];
+            const usernames = ['indulekha ', 'nijad', 'praveen ', 'sandesh', 'sayooj', 'abhinav',];
+            const passwords = ['indu', 'saiceer', 'prav', 'suresh', 'vijayakumar', '1234567',];
 
             const randomUsername = usernames[Math.floor(Math.random() * usernames.length)];
             const randomPassword = passwords[Math.floor(Math.random() * passwords.length)];
