--- a/in.html
+++ b/in.html
@@ -7,6 +7,7 @@
 </head>
 <body bgcolor="#0C1013">
   
-  <img src="https://assets.onecompiler.app/42tmq6jud/3ww47radw/1000100250.jpg"
-</body>
+  <a href="jst.html"><img src="https://assets.onecompiler.app/42tmq6jud/42wk5u6j7/1000100254.jpg">
+  </a></body>
+  <img src="https://assets.onecompiler.app/42tmq6jud/42wk5u6j7/1000100255.jpg">
 </html>
