--- a/jst.html
+++ b/jst.html
@@ -79,7 +79,7 @@
       </button>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-    <a href="djjsjjs.html">
+    <a href="pra.html">
       <button class="nav-button">
         
         <img src="https://assets.onecompiler.app/42tmq6jud/42wmr4y7g/1000100314.jpg"
@@ -89,7 +89,7 @@
       </button>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-    <a href="Reel.html">
+    <a href="reel.html">
       <button class="nav-button">
         
         <img src="https://assets.onecompiler.app/42tmq6jud/42wmr4y7g/1000100314.jpg"
