--- a/reel.html
+++ b/reel.html
@@ -29,7 +29,7 @@
     </a>
     
     <video id="video1" autoplay playsinline loop preload="auto">
-        <source src="pra.mp4" type="video/mp4"> <!-- Updated path -->
+        <source src="a.mp4" type="video/mp4"> <!-- Updated path -->
         Your browser does not support the video tag.
     </video>
 
